# swagger/swagger.json
@@ -29,6 +29,28 @@
                         "type": "string"
                     }
                 ]
+            },
+            "delete": {
+                "tags": [
+                    "app"
+                ],
+                "description": "delete an App",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "namespace",
+                        "description": "namespace",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "app_name",
+                        "description": "app name",
+                        "required": true,
+                        "type": "string"
+                    }
+                ]
             }
         },
         "/app/{app_name}": {
@@ -37,6 +59,28 @@
                     "app"
                 ],
                 "description": "get app detail: service + RC + Pod",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "namespace",
+                        "description": "namespace",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "app_name",
+                        "description": "app name",
+                        "required": true,
+                        "type": "string"
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "app"
+                ],
+                "description": "toggle app status(start, stop). 0: stopped, 1: running",
                 "parameters": [
                     {
                         "in": "query",
@@ -364,41 +408,6 @@
         }
     },
     "definitions": {
-        "Object": {
-            "title": "Object",
-            "type": "object",
-            "properties": {
-                "ObjectId": {
-                    "type": "string"
-                },
-                "PlayerName": {
-                    "type": "string"
-                },
-                "Score": {
-                    "type": "integer",
-                    "format": "int64"
-                }
-            }
-        },
-        "Profile": {
-            "title": "Profile",
-            "type": "object",
-            "properties": {
-                "Address": {
-                    "type": "string"
-                },
-                "Age": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Email": {
-                    "type": "string"
-                },
-                "Gender": {
-                    "type": "string"
-                }
-            }
-        },
         "ReplicationControllerCopy": {
             "title": "ReplicationControllerCopy",
             "type": "object"
@@ -406,24 +415,6 @@
         "ServiceCopy": {
             "title": "ServiceCopy",
             "type": "object"
-        },
-        "User": {
-            "title": "User",
-            "type": "object",
-            "properties": {
-                "Id": {
-                    "type": "string"
-                },
-                "Password": {
-                    "type": "string"
-                },
-                "Profile": {
-                    "$ref": "#/definitions/Profile"
-                },
-                "Username": {
-                    "type": "string"
-                }
-            }
         }
     },
     "tags": [
